# ci-test

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
docker/: Dockerfile
